the_project/manifests/broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
  namespace: project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: project/broadcaster
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "120m"
              memory: "100Mi"
