the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: the-project-pvc
      containers:
        - name: todo-app
          image: jbbernardo7/todo-app:v1.0
          imagePullPolicy: Always
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
