the_project/manifests/todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: the-project-pvc
      containers:
        - name: todo-app
          image: jbbernardo7/todo-app:v1.2
          imagePullPolicy: Always
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
